
*********************************************************************************************
*                                  CHANGE LOG 1.0.1 - > 1.1.0                               *
*********************************************************************************************
 
 * (02/12/2012) kivan
	# 259
	
	CHANGED: jerpa_db_derby.sql - removed unique constraints on hardware
	CHANGED: EDEDClient (and its jar) - updated wsdl file, added support for hardwareinfo, added list into experimentinfo for m:n relation description with hardware
	CHANGED: JerpaLang (and its jar) - added few new translations in ededb section
	CHANGED: ExperimentOverView - added hardware information panel
	CHANGED: Syncer - added download sync for hardware
	CHANGED: ImportWizard - added harware information panel; added row model for importfiles table, minor changes in importfilestable model
	CHANGED: Hibernate mapping - removed unnecessary mapings of HardwareUsageRel (M:N between experiments and hardware). M:N sets modified in Hardware and Experiment mappings.
	CHANGED: Hardware pojo - added custom toString method for ImportWizard ComboBox.
 
 * (02/08/2012) kivan
	# 258
	
	CHANGED: added missing localization into ExperimentOverview and BlobViewer (thus JerpaLang was updated too)
 
 * (02/07/2012) kivan
	# 257
	
	CHANGED: JerpaLang jar and resource bundles - new translations
	CHANGED: ImportWizard now has ILanguage interface, fixing back some rewritten actions with ILanguage
	CHANGED: ImportWizard and BlobViewer are now connected to Working (i.e. EDEDB displays that they are working)
	CHANGED: EDEDB should be from the most part in state as it was before ededb core and data layer rewritting.
	ADDED: some classes (import file table model,...) created due to refactoring and fixing of existing code
 
 * (02/07/2012) kivan
	# 256
	
	ADDED: ImportWizardLogic: logic part of import wizard. incomplete, but almost finished.