@@ -1,11 +1,13 @@
 package ch.ethz.origo.jerpa.data.tier.dao;
 
 import ch.ethz.origo.jerpa.data.tier.HibernateUtil;
+import ch.ethz.origo.jerpa.data.tier.pojo.DataFile;
 import ch.ethz.origo.jerpa.data.tier.pojo.Experiment;
 import org.hibernate.Criteria;
 import org.hibernate.FetchMode;
 import org.hibernate.Session;
 import org.hibernate.Transaction;
+import org.hibernate.criterion.Projections;
 
 import java.util.List;
 
@@ -27,6 +29,17 @@ public class ExperimentDao extends GenericDao<Experiment, Integer> {
         List<Experiment> allRecords = session.createCriteria(Experiment.class).setFetchMode("scenario", FetchMode.JOIN).setResultTransformer(Criteria.DISTINCT_ROOT_ENTITY).list();
         transaction.commit();
         return allRecords;
+    }
+
+    /**
+     * Getter of highest actual identifier + 1
+     *
+     * @return next primary key value
+     */
+    public int getNextAvailableId() {
+        Session session = HibernateUtil.getSessionFactory().getCurrentSession();
+        session.beginTransaction();
+        return (Integer) session.createCriteria(Experiment.class).setProjection(Projections.max("experimentId")).uniqueResult() + 1;
     }
 
 }
